--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"express",
 		"node"
 	],
-	"author": "ayush kanduri",
+	"author": "Himanshu Saini",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/Ayush-Kanduri/Placement-Cell-Application/issues"
